updated app width to prevent overflow

--- a/app/src/App.css
+++ b/app/src/App.css
@@ -49,3 +49,15 @@
         transform: rotate(360deg);
     }
 }
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
+
+html {
+    /* this makes sure the padding and the border is included in the box sizing */
+    box-sizing: border-box;
+    overflow-x: hidden;
+}
