--- a/app/src/components/footer.css
+++ b/app/src/components/footer.css
@@ -1,9 +1,8 @@
 .footer {
-    position: fixed;
     left: 0;
     bottom: 0;
-    width: 100%;
+    right: 0;
+    margin: 0;
     background-color: black;
-    color: black;
-    text-align: center;
+    overflow-x: none;
 }
